--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #Setup JDBC connection
-spring.datasource.url=jdbc:mysql://localhost:3306/db_datamate
+spring.datasource.url=jdbc:mysql://localhost:3307/db_datamate
 
 #Setup db login credentials
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=QueSeraSera@123
+
 
 # Auto create tables based on entities
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
