cleaned up deploy commits

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 #Setup JDBC connection
-spring.datasource.url=postgres://db_datamate_user:Oj9iHI28hYp5nEcmwwvouxw6bTaIdFZA@dpg-clacpn9m6hds73dhnba0-a/db_datamate
+spring.datasource.url=jdbc:mysql://localhost:3306/db_datamate
+
+#Setup db login credentials
+spring.datasource.username=root
+spring.datasource.password=root
 
 # Auto create tables based on entities
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 
 # for stack trace error not to appear 
 server.error.include-stacktrace=never
