--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 #Setup JDBC connection
-spring.datasource.url=jdbc:mysql://localhost:3306/db_datamate
+spring.datasource.url=jdbc:postgresql://dpg-clacpn9m6hds73dhnba0-a.oregon-postgres.render.com/db_datamate
 
 #Setup db login credentials
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=db_datamate_user
+spring.datasource.password=Oj9iHI28hYp5nEcmwwvouxw6bTaIdFZA
 
 # Auto create tables based on entities
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # for stack trace error not to appear 
 server.error.include-stacktrace=never
